# british_pixelart_llm

./: .gitignore  CLAUDE.md  PLAN.md  README.md  models.toml  pyproject.toml
docs/: pixelart-plan.md
docs/handbook/: 00-project-setup.md  01-textual-tui.md  02-persistence-sqlite.md  03-serving-and-model-switching.md  04-finetuning-data.md  05-qlora-training-slurm.md  06-gguf-export-and-serving.md  07-keyword-routing.md
models/: Modelfile.g1  README.md
src/bpx/: __init__.py  app.py  cli.py  llm.py  registry.py  setup.py  store.py
src/bpx/router/: __init__.py  keywords.py
src/bpx/widgets/: __init__.py  model_picker.py  spinner.py
tests/: test_app.py  test_registry.py  test_router.py  test_spinner.py  test_store.py
training/: README.md  config.sh  download_datasets.py  download_teacher.py  download_weights.py  export_gguf.sh  filter.py  g1_smoke.py  generate.py  make_dummy_data.py  personas.py  submit_g1.sh  submit_teacher.sh
training/data/: british_train.jsonl  british_val.jsonl  scottish_train.jsonl  scottish_val.jsonl
training/env/: import_image.sh  import_vllm.sh  requirements.txt  setup_env.sh
training/prompts/: __init__.py  build_bank.py  spike.py  triggers.py
training/seeds/: __init__.py  exemplars.py
training/slurm/: g1.sbatch  teacher.sbatch
