[project]
name = "british-pixelart-llm"
version = "0.0.1"
description = "Claude-Code-style Textual TUI chat over local LLMs (Ollama), with British/Scottish LoRA personas and pixel-art animations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Philipp Mattar" }]
dependencies = [
    "textual>=0.85",
    "openai>=1.51",
]

[project.scripts]
bpx = "bpx.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bpx"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "textual-dev>=1.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
